<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/user_detal_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_toRightOf="@id/user_detal_view"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/second_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_toRightOf="@id/user_detal_view"
        android:textSize="@dimen/sub_title"
        tools:text="@string/topic" />


    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_text"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:maxLines="2"
        android:textSize="@dimen/text_email"
        tools:text="@string/email_text" />

    <TextView
        android:id="@+id/data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="@dimen/default_margin"
        android:textSize="@dimen/date"
        tools:text="@string/email_date" />


    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/button_one_text"
        android:textColor="@android:color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_toRightOf="@+id/b1"
        android:text="@string/button_two_text"
        android:textColor="@android:color/black" />
</RelativeLayout>


