<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="@dimen/max_email_item_height">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:ellipsize="end"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/email_item_margin_between_text_views"
        android:layout_toStartOf="@+id/data_text"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginLeft="@dimen/MarginLeft"
        android:layout_toRightOf="@+id/user_image"
        android:paddingStart="@dimen/default_margin"
        android:paddingTop="@dimen/default_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_marginBottom="@dimen/email_item_margin_between_text_views"
        android:layout_marginLeft="@dimen/MarginLeft"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/secondary_text_size"
        tools:text="@string/topic" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle_text"
        android:ellipsize="end"
        android:layout_marginLeft="@dimen/MarginLeft"
        android:maxLines="1"
        android:paddingStart="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        android:paddingBottom="@dimen/default_margin"
        android:textSize="@dimen/secondary_text_size"
        tools:text="@string/email_text" />

    <TextView
        android:id="@+id/data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="@dimen/default_margin"
        android:textSize="@dimen/date"
        tools:text="@string/email_date" />

</RelativeLayout>